<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMX"
    android:background="@color/cyan">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:src="@drawable/bmx"
        android:contentDescription="@string/desc_img_bmx" />

    <TextView
        android:id="@+id/bmx_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginRight"
        android:text="@string/text_bmx"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/bmx_et2"
        android:layout_width="wrap_content"
        android:layout_height="263dp"
        android:layout_below="@id/bmx_et"
        android:layout_marginLeft="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginRight"
        android:text="@string/text_bmx2"
        android:textColor="@color/orange" />

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmx_et2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/retour"
        app:backgroundTint="@color/orange" />

</RelativeLayout>